<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_navigation"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/generator_navigation"
            android:icon="@drawable/ic_baseline_key_24"
            android:title="@string/menu_generator" />
        <item
            android:id="@+id/bookmarks_navigation"
            android:icon="@drawable/ic_bookmark"
            android:title="@string/menu_bookmarks" />

        <item
            android:id="@+id/settings_navigation"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"
            />
    </group>
</menu>