<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".presentation.fragments.PasswordGeneratorFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/number_of_passwords"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/gray_primary"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/password_gen_linearLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_less"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="-" />

        <EditText
            android:id="@+id/et_number"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="number"
            android:text="0"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_gen_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/account_setting_bg_shape"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cb_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/check_box_numbers"
                android:textSize="16sp"
                tools:checked="true" />

            <CheckBox
                android:id="@+id/cb_lowercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/check_box_lowercase"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_uppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/check_box_uppercase"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cb_special_symbols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:text="@string/check_box_special_symbols"
                android:textSize="16sp" />

        </LinearLayout>

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/generate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/generate" />
    </LinearLayout>

    <EditText
        android:layout_marginBottom="16dp"
        android:id="@+id/editTextTextPersonName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/generated_passwords"
        android:gravity="bottom"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>